# backend/src/openapi.rs
@@ -59,6 +59,7 @@ use crate::{
         catalog::create,
         catalog::update,
         catalog::delete,
+        catalog::delete_media,
         catalog::change_status,
         catalog::category_list,
         catalog::category_create,
@@ -78,6 +79,7 @@ use crate::{
         media::initiate_personalization,
         media::complete_personalization,
         media::admin_personalization_asset,
+        media::admin_product_asset,
         media::admin_order_product_asset,
         inventory::list,
         inventory::movements,
